Finish the shard code

--- a/biome.json
+++ b/biome.json
@@ -5,7 +5,8 @@
     },
     "formatter": {
         "indentStyle": "space",
-        "indentWidth": 4
+        "indentWidth": 4,
+        "lineWidth": 140
     },
     "linter": {
         "enabled": true,
